[package]
name = "boggle-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "*"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
