[package]
name = "boggle-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "*"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
